# video_lists_downloader

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  bin_manager.py  pyproject.toml  video_downloader.py
.agent/workflows/: release.md
.github/workflows/: ci.yml  release.yml
docs/: developer_log.md  faq.md  quick_start.md  research_log.md  troubleshooting.md  user_guide.md
docs/sessions/: 2026-05-14-download-task-ux.md  2026-05-14-playlist-management-ui.md  2026-05-14-playlist-reliability-fixes.md  2026-05-14-repo-maintenance-setup.md  SESSION_TEMPLATE.md
tests/: test_video_downloader.py
