[project]
name = "video-downloader-pyside6"
version = "0.5.1"
description = "影片批量下載工具 - 支援 YouTube 與 Bilibili 平台"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.5.0",
    "yt-dlp>=2024.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-qt>=4.2.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
video-downloader = "video_downloader:main"

[tool.uv]

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_ignores = true

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]
